--- a/index.html
+++ b/index.html
@@ -1836,7 +1836,7 @@ $next_post = get_next_post();
     <div class="copyRightBox">
         <p>
             &copy; All Right Reserved &reg; 2023 by
-            <a href="https://github.com/chauhan07/" target="_blank">Aditya Chauhan</a>
+            <!-- <a href="https://github.com/chauhan07/" target="_blank">Aditya Chauhan</a> -->
         </p>
     </div>
 
