--- a/index.html
+++ b/index.html
@@ -239,7 +239,11 @@
                             27. Multiple pages redirect to single page
                         </a>
                     </li>
-
+                    <li data-topic="Modify excerpt">
+                        <a href="javascript:void(0)" onclick="scrollToSection('mv13')">
+                            28. Download PDF link from gdrive for webflow
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -2130,6 +2134,22 @@ add_filter( 'wp_check_filetype_and_ext', function($data, $file, $filename, $mime
 Source URL: /core-team/(.*)
 target URL: /people
 using redirection plugin
+</code>
+                                </pre>
+                        </span>
+                    </div>
+                </li>
+                <li id="mv13">
+                    <div>
+                        <h3>
+                            <span class="text">
+                                28. Download PDF link from gdrive for webflow
+                            </span>
+                        </h3>
+                        <span class="function">
+                            <pre class="line-numbers">
+<code class="language-php">https://drive.google.com/uc?export=download&id=FILE_ID
+https://drive.google.com/uc?export=download&id=1h9ShiAYPV6w-Cq5lRvALY5FFkIceHmTV
 </code>
                                 </pre>
                         </span>
